# Apollo

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/camera/: camera.cpp  camera.h
src/core/: apollo.h  film.cpp  film.h  imageio.cpp  imageio.h  light.cpp  light.h  primitive.cpp  primitive.h  stringprint.h
src/math/: .vector2.cpp.swp  .vector2.h.swp  bounds2.h  bounds3.h  interaction.cpp  interaction.h  matrix.cpp  matrix.h  normal3.h  point2.h  point3.h  ray.cpp  ray.h  transform.cpp  transform.h  vector2.h  vector3.h
src/shapes/: shape.cpp  shape.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/spectrum/: rgb.cpp  rgb.h
